fix: avoid overlapping h1 vs h2 on home page

--- a/pages/style.module.scss
+++ b/pages/style.module.scss
@@ -7,7 +7,7 @@
 
   .titleWrapper {
     text-align: center;
-    margin: 1rem 0 2rem;
+    margin: 1rem 0 0;
 
     .pageTitle {
       margin: 1rem 0;
@@ -20,9 +20,7 @@
 }
 
 .mobile {
-  padding: 0 0 50px 0;
-  height: calc(100vh - $headerHeight);
-  max-height: 1000px;
+  padding: 0;
   display: flex;
   align-items: center;
   border-bottom: 1px solid $divider;
